fixed vertical alignment on nav elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ nav{
 #menu li{
     float: right;
     list-style-type: none;
-    margin: 1.5rem 3rem 0 0;
+    margin: 0 3rem 0 0;
 }
 
 #menu a{
